--- a/mission6-1022/main.css
+++ b/mission6-1022/main.css
@@ -1,81 +1,81 @@
 body
 {
 	background-color: #e4e6e4;
-}
-
-#banner
-{
-	margin: auto;
-	margin: 0px;
-	padding: 0px;
-	width: 1440px;
-	height: 287px; 
-}
-
-.top_menu
-{
-	margin-top:5px;
-}
-
-.top_menu ul
-{
-	list-style: none;
-	margin: 0px;
-	margin-left: 128px;
-	padding: 0px;
-}
-
-.top_menu ul li
-{
-	float:left;
-	height: 60px;
-}
-
-.main
-{
-	background: #fff;
-	margin:auto;
-	margin-top:70px;	
-	width:1201px;
-	height:500px;
-}
-
-.foot
-{
-	margin:auto;
-	margin-top: 5px;
-	width: 1440px;
-	height: 30px;
-	background: url("images/foot.png");
-	font-family: "Microsoft YaHei";
-	color: #fff;
-	text-align: center;
-	font-size: 12px;
+	font-size: 100%;
 }
 
 p
 {
-	font-size: 14px;
+	font-size: 1em;
 	font-family: "Microsoft YaHei";
 }
 
 h2
 {
 	text-align: center;
-	font-size: 20px;
+	font-size: 1.5em;
 	font-family: "Microsoft YaHei";
+}
+
+.banner
+{
+	margin: auto;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+}
+
+.top_menu
+{
+	margin-top: 0.5em;
+	font-size: 2em;
+	font-family: "Microsoft YaHei";
+
+}
+
+.top_menu ul
+{
+	list-style: none;
+	margin: auto 4em ; /* 因为这里的字体为2em，所以原本需要8em的左边距变成了4em。*/
+	padding: 0;
+}
+
+.top_menu ul li
+{
+	float:left;
+	height: 3.5em;
+	padding: 0 0.5em;
+}
+
+.main
+{
+	background: #fff;
+	margin:4em 8em 0.25em;	
+	width:83%;
+	height: 100%;
 }
 
 .text_para
 {
-	margin: 15px;
 	float: left;
 }
 
 .img_para
 {
 	margin:auto;
-	height: 320px;
+	height: 100%;
 	float: right;
-	margin: 30px;
+	margin: 2em;
+}
+
+.foot
+{
+	margin: auto;
+	padding: 0.25em;
+	width: 100%;
+	font-family: "Microsoft YaHei";
+	background: #88C0FA;
+	color:#fff;
+	text-align: center;
+	font-size: 0.75em;
 }
