--- a/mission8-1108/main.css
+++ b/mission8-1108/main.css
@@ -10,10 +10,9 @@ p
 	font-size: 1em;	
 }
 
-h1
+a:link
 {
-	text-align: center;
-	font-size: 1.5em;
+	text-decoration: none;
 }
 
 .banner
@@ -28,6 +27,8 @@ h1
 {
 	margin-top: 0.5em;
 	font-size: 2em;
+	font-family: "Microsoft JhengHei";
+	font-weight: bold;
 }
 
 .top_menu ul
@@ -40,7 +41,7 @@ h1
 .top_menu ul li
 {
 	float:left;
-	height: 3.5em;
+	height: 2.5em;
 	padding: 0 0.5em;
 }
 
@@ -50,6 +51,12 @@ h1
 	margin:4em 8em 0.25em;	
 	width:83%;
 	height: 100%;
+}
+
+.main_left
+{
+	width: 60%;
+	margin-left: 10%;
 }
 
 .text_para
