--- a/mission10-1123/main.css
+++ b/mission10-1123/main.css
@@ -30,8 +30,8 @@ body
 {
 	float: right;
 	width: 10em;
-	margin-top: -46.4em; /*不明白为什么会“掉下去”；*/
-	/*margin-right: 0;*/
+	/*margin-top: -46.4em; /*不明白为什么会“掉下去”；*/
+	margin-right: 0;*/
 }
 
 .foot
