--- a/mission10-1123/main2.css
+++ b/mission10-1123/main2.css
@@ -15,23 +15,23 @@ body
 {
 	float:left;
 	list-style: none;
-	width: 10em;
+	width: 20%;
 }
 
 .article_list
 {
-	/*float: left;*/
+	float: left;
 	margin: 0 11em;
-	width: 65%; /*这是相对宽度；*/
+	width: 55%; /*这是相对宽度；*/
 	/*width:54em;*/ /*这是固定宽度；*/
 }
 
 .myself
 {
-	float: right;
-	width: 10em;
+	float: left;
+	width: 20%;
 	/*margin-top: -46.4em; /*不明白为什么会“掉下去”；*/
-	margin-right: 0;*/
+	margin-left: 80%;
 }
 
 .foot
