--- a/main.css
+++ b/main.css
@@ -1,84 +1,9 @@
 body
 {
-	background-color: #e4e6e4;
-	font-size: 100%;
-	font-family: "Microsoft YaHei";
+	font-family: "Microsoft Yahei";
 }
 
-p
+canvas
 {
-	font-size: 1em;	
-}
-
-a:link
-{
-	text-decoration: none;
-}
-
-.banner
-{
-	margin: auto;
-	margin: 0;
-	padding: 0;
-	width: 100%;
-}
-
-.top_menu
-{
-	margin-top: 0.5em;
-	font-size: 2em;
-	font-family: "Microsoft JhengHei";
-	font-weight: bold;
-}
-
-.top_menu ul
-{
-	list-style: none;
-	margin: auto 4em ; /* 因为这里的字体为2em，所以原本需要8em的左边距变成了4em。*/
-	padding: 0;
-}
-
-.top_menu ul li
-{
-	float:left;
-	height: 2.5em;
-	padding: 0 0.5em;
-}
-
-.main
-{
-	background: #fff;
-	margin:4em 8em 0.25em;	
-	width:83%;
-	height: 100%;
-}
-
-.main_left
-{
-	width: 60%;
-	margin-left: 10%;
-}
-
-.text_para
-{
-	float: left;
-}
-
-.img_para
-{
-	margin:auto;
-	height: 100%;
-	float: right;
-	margin: 2em;
-}
-
-.foot
-{
-	margin: auto;
-	padding: 0.25em;
-	width: 100%;
-	background: #88C0FA;
-	color:#fff;
-	text-align: center;
-	font-size: 0.75em;
+	border: 1px solid black;
 }
